<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginTop="10dp"
        android:background="@color/primary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/LogoImage"
            android:layout_width="407dp"
            android:layout_height="324dp"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="283dp"
            android:contentDescription="@string/logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="411dp"
            android:layout_height="69dp"
            android:background="#00FFFFFF"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/LogoImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TakeCare" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="303dp"
            android:layout_height="48dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Age"
            app:layout_constraintTop_toBottomOf="@+id/LogoImage"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Phone"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:text="@string/phone_label"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Age"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/password"
            android:layout_width="117dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:text="@string/password_label"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editPassword2"
            app:layout_constraintHorizontal_bias="0.941"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Phone"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Phone"
            app:layout_constraintTop_toBottomOf="@+id/LogoImage"
            app:layout_constraintVertical_bias="0.031" />

        <EditText
            android:id="@+id/editPassword2"
            android:layout_width="258dp"
            android:layout_height="48dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="111dp"
            android:layout_marginEnd="18dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/Phone"
            app:layout_constraintTop_toBottomOf="@+id/LogoImage"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/ShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/show_password_checkbox"
            app:layout_constraintBottom_toTopOf="@+id/LoginRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword2" />

        <Button
            android:id="@+id/LoginRegister"
            android:layout_width="132dp"
            android:layout_height="57dp"
            android:layout_marginStart="112dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="61dp"
            android:text="@string/login_register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/toggleButton"
            app:layout_constraintTop_toBottomOf="@+id/ShowPassword" />

        <TextView
            android:id="@+id/Age"
            android:layout_width="72dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:text="@string/email_label"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogoImage"
            app:layout_constraintVertical_bias="0.035" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="133dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:checked="true"
            android:textOff="@string/patient_mode"
            android:textOn="@string/caretaker_mode"
            app:layout_constraintBottom_toTopOf="@+id/Info"
            app:layout_constraintEnd_toStartOf="@+id/ShowPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/Info"
            android:layout_width="145dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="36dp"
            android:text="@string/toggle_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/LoginRegister"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
