<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".CaretakerView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TakeCare" />

        <Button
            android:id="@+id/Back"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/msgPatient"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="16dp"
            android:text="@string/MsgPatient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <Button
            android:id="@+id/CallPatient"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="236dp"
            android:text="@string/CallPatient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <Button
            android:id="@+id/AddTask"
            android:layout_width="374dp"
            android:layout_height="66dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/AddTask"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/caretakerTasksRecyclerView"
            android:layout_width="409dp"
            android:layout_height="400dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toTopOf="@+id/AddTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/msgPatient" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Back" />

        <TextView
            android:id="@+id/Age"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <TextView
            android:id="@+id/PhoneNum"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Location" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="180dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
